Add Installation class, and uninstallation scripts.

--- a/Spotify Premium Installer/Spotify Premium Installer.csproj
+++ b/Spotify Premium Installer/Spotify Premium Installer.csproj
@@ -5,9 +5,19 @@
     <TargetFramework>net8.0</TargetFramework>
     <RootNamespace>Spotify_Premium_Installer</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <PublishAot>true</PublishAot>
     <InvariantGlobalization>true</InvariantGlobalization>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Update="res\uninstallpatch.bat">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="res\uninstallspotify.bat">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 
 </Project>
